# siotls

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .python-version  .sed-fix-curl  README.md  badge.sh  log  pyproject.toml  tls13-h1.pcapng
src/siotls/: __init__.py  __main__.py  _vendor.py  alerts.py  ciphers.py  configuration.py  connection.py  contents.py  extensions.py  handshakes.py  iana.py  ocsp_over_http.py  ocsp_service.py  records.py  secrets.py  serial.py  serializable.py  state.py  transcript.py  trust_store.py  utils.py  wrapper.py
src/siotls/contents/: __init__.py  alerts.py  application_data.py  change_cipher_spec.py  heartbeat.py
src/siotls/contents/handshakes/: __init__.py  certificate.py  certificate_request.py  certificate_verify.py  client_hello.py  encrypted_extensions.py  end_of_early_data.py  finished.py  key_update.py  new_session_ticket.py  server_hello.py
src/siotls/contents/handshakes/extensions/: __init__.py  alpn.py  application_layer_protocol_negotiation.py  certificate_authorities.py  certificate_type.py  cookie.py  early_data.py  heartbeat.py  key_share.py  max_fragment_length.py  oid_filters.py  padding.py  post_handshake_auth.py  pre_shared_key.py  psk_key_exchange_modes.py  server_name.py  signature_algorithms.py  signed_certificate_timestamp.py  status_request.py  supported_groups.py  supported_versions.py  use_srtp.py
src/siotls/crypto/: __init__.py  ciphers.py  ffdhe.py  hkdf.py  key_exchanges.py  key_share.py  ocsp.py  signatures.py  trust_store.py
src/siotls/data/: self-signed-cert.pem  self-signed-key.pem
src/siotls/examples/: minih1s.py  simple.py  simple_client.py  simple_server.py
src/siotls/extensions/: __init__.py  application_layer_protocol_negotiation.py  certificate_authorities.py  certificate_type.py  client_certificate_type.py  cookie.py  early_data.py  heartbeat.py  key_share.py  max_fragment_length.py  oid_filters.py  padding.py  post_handshake_auth.py  pre_shared_key.py  psk_key_exchange_modes.py  server_certificate_type.py  server_name.py  signature_algorithms.py  signature_algorithms_cert.py  signed_certificate_timestamp.py  status_request.py  supported_groups.py  supported_versions.py  use_srtp.py
src/siotls/handshakes/: __init__.py  certificate.py  certificate_request.py  certificate_verify.py  client_hello.py  finished.py  key_update.py  new_session_ticket.py  server_hello.py
src/siotls/states/: __init__.py  client.py  closed.py  connected.py  failed.py  server.py
src/siotls/states/client/: __init__.py  closed.py  connected.py  start.py  wait_cert_cr.py  wait_certificate.py  wait_certificate_verify.py  wait_encrypted_extensions.py  wait_finished.py  wait_server_hello.py
src/siotls/states/server/: __init__.py  closed.py  connected.py  start.py  wait_certificate.py  wait_certificate_verify.py  wait_client_hello.py  wait_end_of_early_data.py  wait_finished.py  wait_flight2.py
tests/: __init__.py  config.py  curl.txt  test_configuration.py  test_crypto_key_exchange.py  test_crypto_key_share.py  test_curl.py  test_encrypted_extensions.py  test_misc.py  test_negociation.py  test_openssl.py  test_serial.py  test_states.py  test_utils.py  test_various.py  test_wire_client_hello.py  test_wire_extension.py
tests/pem/: 00newkey.py  00resitry.md  ca-cert.pem  ca-privkey.pem  ca-pubkey.pem  client-cert.pem  client-privkey.pem  client-pubkey.pem  server-cert.pem  server-privkey.pem  server-pubkey.pem
tests/test_contents/: __init__.py  test_content_extensions.py  test_content_handshakes.py
toolbox/: genkeys.sh  pubkeys.txt
