[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "siotls"
version = "0.0.1"
description = "TLS 1.3 sans I/O"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  { name="Julien Castiaux", email="julien.castiaux@gmail.com" },
]
keywords = [

]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.urls]
# Download =
# Homepage =
# Repository =
# Changelog =
# Documentation =
# Bug Tracker =
# Funding =

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"siotls.data" = ["*"]

