[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "siotls"
version = "0.0.1a"
description = "Sans-IO Python implementation of the TLS 1.3 (RFC 8446) protocol stack"
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
authors = [
  { name="Julien Castiaux", email="julien.castiaux@gmail.com" },
]
keywords = [

]
classifiers = [
  "Development Status :: 2 - Alpha",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "cryptography>=43",
  "idna"
]

[project.optional-dependencies]
dev = [
  "coverage",
  "isort==5.13.2",  # keep me sync with .pre-commit-config.yaml
  "freezegun",
  "parameterized",
  "pre-commit",
  "ruff==0.4.5",  # keep me sync with .pre-commit-config.yaml
]

[project.urls]
# Download =
# Homepage =
# Repository =
# Changelog =
# Documentation =
# Bug Tracker =
# Funding =

[project.scripts]
siotls = "siotls.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 96  # github editor in split view
lint.select = ["ALL"]
lint.ignore = [
  "D",  # docstrings, for now
  "ANN",  # annotation
  "COM812",  # trailing comma, unusable for now
  "DJ",  # django
  "PT",  # pytest
  "PTH", # pathlib
  "Q",  # quote, I like ' for technical strings and " for human text
  "D212",  # docstrings
  "ERA001",  # commented code
  "PYI013",  # ellipsis
  "PYI024",  # collections.namedtuple
  "SIM102", "PLR5501", "RET505", "RET506",  # if/elif
  "TD", "FIX002",  # todo
  "RET504",  # x = ...; return x
]
lint.exclude = ["src/siotls/_vendor.py"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401", "E402",  # imports
]
"src/siotls/iana.py" = ["D"]
"src/siotls/contents/**/*.py" = [
  "D102", "D105", "D107", "D204", "D205",  # docstrings
  "N804",  # abc instead of cls
]
"src/siotls/states/**/*.py" = [
  "TID252",  # from .. import State
]
"tests/**/*.py" = [
  "D",  # docstrings
  "SLF001",  # access private members
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["siotls"]

[tool.isort]
src_paths = ["src", "tests"]
skip = [".gitignore", ".dockerignore"]
profile = "black"
multi_line_output = 3
line_length = 96  # github editor in split view
known_first_party = ["siotls"]
combine_as_imports = true
